--- a/templates/template.html
+++ b/templates/template.html
@@ -48,6 +48,8 @@
     <input type="hidden" name="fieldsStatus" id="fieldsStatus" value="{{ fieldsStatus }}" />
     <input type="hidden" name="lastFileName" id="lastFileName" value="{{ fileName }}" />
     <input type="hidden" name="lastQuery" id="lastQuery" value="{{ query }}" />
+    <strong>Page</strong>:
+    <input type="text" id="page" name="page" size="2" value="{{ page }}">
     <strong>Page size</strong>:
     <select name="size" onchange="this.form.submit()">
         {% for key in pageSizes %}
@@ -59,7 +61,7 @@
         {% endfor %}
     </select>
     <strong>Query</strong>:
-    <input type="text" id="query" name="query" size="10" value={{ query }}>
+    <input type="text" id="query" name="query" size="10" value="{{query }}">
     <strong>User</strong>: {{ username }}
     (<a href="{{ URL }}?logout">logout</a>)
     <p>
@@ -93,7 +95,7 @@
         {% set key = loop.index0 %}
         {% set __ = index.append(1) %}
         <tr>
-	    <td align="right">{{ key+1 }}.</td>
+	    <td align="right" valign="top">{{ key+1 }}.</td>
 	    {% if fieldsShow["Human"] %}
 	    <td valign="top">
 	       <select name="data{{ index|length }}" onchange="this.form.submit()">
