added javascript check

--- a/templates/template.html
+++ b/templates/template.html
@@ -77,6 +77,7 @@
     {% if nbrOfSelected > 0 %}
     <hr>
     <div id="helpTextDiv">{{ helpText }}<hr></div>
+    <noscript><font color="red">WARNING: JAVASCRIPT IS TURNED OFF: NEW ANNOTATIONS WILL NOT BE STORED</font><hr></noscript>
     <p>
     <font size="3">
     <table>
