--- a/templates/template-nl.html
+++ b/templates/template-nl.html
@@ -75,6 +75,7 @@
 	{% endif %}
 	{% endfor %}
     {% if nbrOfSelected > 0 %}
+    | <a href="{{ URL+"overview?fileName="+fileName }}">Overzicht annotatoren</a>
     <hr>
     <div id="helpTextDiv">{{ helpText }}<hr></div>
     <noscript><font color="red">WAARSCHUWING: JAVASCRIPT STAAT UIT: NIEUWE ANNOTATIES WORDEN NIET OPGESLAGEN!</font><hr></noscript>
@@ -103,7 +104,7 @@
 	       {% for l in labels|dictsort(false,'value') %}
 	       {% if l[1] != "ERROR" %}
 	       <option value="{{ key ~ " " ~ l[1] }}"
-	       {% if humanLabels[data[key]["id"]] == l[1] %}
+	       {% if humanLabels[data[key]["id"]][0] == l[1] %}
 	       selected
 	       {% endif %}
 		>{{ l[1] }}</option>
@@ -136,6 +137,7 @@
 	<a href="{{ URL }}/?page={{ p }}&fileName={{ fileName }}&human={{ human }}&pageSize={{ pageSize }}&fieldsStatus={{ fieldsStatus }}&query={{ query }}&lastQuery={{ query }}">{{ p }}</a>
 	{% endif %}
     {% endfor %}
+    | <a href="{{ URL+"overview?fileName="+fileName }}">Overzicht annotatoren</a>
     <hr>
     {% endif %}
     </form>
