--- a/templates/template-nl.html
+++ b/templates/template-nl.html
@@ -15,7 +15,7 @@
             {% if f == fileName %} 
             selected 
             {% endif %}
-            >{{ f }}</option>
+            >{{ fileNames[f] }}</option>
         {% endfor %}
     </select>
     <strong>Label</strong>:
@@ -76,6 +76,7 @@
 	{% endfor %}
     {% if nbrOfSelected > 0 %}
     | <a href="{{URL}}overview?fileName={{fileName}}&page={{page}}&pageSize={{pageSize}}">Overzicht annotatoren</a>
+    | <a href="{{URL}}guidelines">Annotatie-richtlijnen</a>
     <hr>
     <div id="helpTextDiv">{{ helpText }}<hr></div>
     <noscript><font color="red">WAARSCHUWING: JAVASCRIPT STAAT UIT: NIEUWE ANNOTATIES WORDEN NIET OPGESLAGEN!</font><hr></noscript>
@@ -146,8 +147,74 @@
 	{% endif %}
     {% endfor %}
     | <a href="{{URL}}overview?fileName={{fileName}}&page={{page}}&pageSize={{pageSize}}">Overzicht annotatoren</a>
+    | <a href="{{URL}}guidelines">Annotatie-richtlijnen</a>
     <hr>
     {% endif %}
     </form>
+<h2>Annotatie-richtlijnen: 1.5 meter</h2>
+<p>Beantwoord de volgende vraag voor elk bericht:</p>
+
+<p>"Is de schrijver het eens of oneens met de regel om 1.5 m afstand te houden?"</p>
+
+<p>Als een bericht voor de 1.5 meter-regel is is het label EENS, anders is het label ONEENS.</p>
+
+<p>Als een bericht niet over de 1.5 meter-regel gaat is het label ANDERS. Ook als het bericht neutraal is over de 1.5 meter-regel, of als de mening van de schrijver erg onduidelijk is, is het label ANDERS. Als het bericht een hashtag bevat over afstand houden maar het bericht gaat verder helemaal niet over dit onderwerp is het label ANDERS.</p>
+
+<p>Als het bericht voor een klein deel over afstand houden gaat maar de mening van de auteur is wel duidelijk, dan is de bedoeling dat het bericht wordt geannoteerd als EENS of ONEENS.</p>
+
+<p>Als een bericht waarschijnlijk of zeker sarcastisch is of een grap, dan is de bedoeling dat het geannoteerd wordt alsof het een gewoon bericht is.</p>
+
+<p>In het algemeen is het de bedoeling om niet te voorzichtig te annoteren. Als de mening van de schrijver afgeleid kan worden uit het bericht dan moet deze mening geannoteerd worden met EENS of ONEENS.</p>
+
+<div style="background-color:lightgrey; font-size:smaller;">
+<h3>Voorbeelden:</h3>
+
+<p><strong>EENS</strong> - Het is niet mogelijk om op iedere straathoek en in iedere winkel een politie agent neer te zetten. Het is juist de bedoeling dat mensen zelf oud en wijs genoeg zijn om de regels na te leven en als in jou omgeving dat niet gebeurd, is het misschien een idee om er iets van te zeggen. Want vreemd is het wel omdat in mijn omgeving de meeste mensen wel de regels opvolgen. En nee, niet altijd overal is 1,5m mogelijk, maar als we met zijn allen zoveel mogelijk ons best doen om wel die 1,5m aan te houden, dan krijgt het virus erg weinig kans om weer de kop op te steken. Het bewijs ligt er, het was een stuk beter totdat steeds meer mensen dachten dat het wel weer kon. </p>
+
+<p><strong>ONEENS</strong> - Dat is weinig wetenschappelijk. Wist je dat het griep seizoen ook voorbij is? Net zoals dat het geval was in juni 2019 en juni 2018 etc. etc. Kwam dat ook door de anderhalve meter?</p>
+
+<p><strong>EENS</strong> (gaat niet echt over distancing, maar de auteur is er wel voor) - Het WHO heeft haar standpunt vooral aangepast vanwege politieke druk en druk vanuit de bevolking. Wetenschappelijk gezien is er geen bewijs dat een mondkapje van toegevoegde waarde is in de bestrijding van corona. Wetenschappers zijn er simpelweg over verdeeld. Een mondkapje kan helpen om druppels enigszins tegen te houden, maar anderzijds kan het er juist ook voor zorgen dat men de afstandsmaatregel eerder gaat negeren. Het argument om mondkapjes te gaan gebruiken is nu vooral omdat men de afstandsmaatregel negeert. Dat is natuurlijk een slechte reden om dan maar een andere maatregel toe te passen, die duidelijk minder effectief is. </p>
+
+<p><strong>EENS</strong> (grap, voorstander) - Leon, dus u vindt 'afstand houden' martelen? Dan moet er toch niet iets ergers gebeuren dan 'afstand houden', u overleeft het dan misschien niet... </p>
+
+<p><strong>ANDERS</strong> (neutraal) - Ik ben benieuwd naar dat onderzoek waarin wordt bewezen dat de 1,5 meter afstand onzin is en dat afstand buiten niet nodig is. Kun je een link sturen of de titel(s) van de wetenschappelijke publicatie(s)?</p>
+</div>
+
+<h2>Annotatie-richtlijnen: Mondkapjes</h2>
+<p>Beantwoord de volgende vraag voor elk bericht:</p>
+
+<p>"Is de schrijver van het bericht het eens of oneens met het beleid om géén mondkapjes te dragen?"</p>
+
+<p>Let op dat deze vraag gaat over het beleid van februari t/m september 2020, waarin de regering het gebruik van mondkapjes niet adviseerde. Als een bericht dus voor mondkapjes is, is de schrijver tegen het beleid, en is het label dus ONEENS. Als de schrijver tegen mondkapjes is, is het label EENS.</p>
+
+<p>Als het bericht niet over mondkapjes gaat is het label ANDERS. Ook als het bericht neutraal is over het gebruik van mondkapjes, of als de mening van de schrijver erg onduidelijk is, is het label ANDERS. Als het bericht een hashtag bevat over mondkapjes maar verder helemaal niet over mondkapjes gaat is het label ANDERS.</p>
+
+<p>Als het bericht gaat over mondkapjes in andere landen en er geen vergelijking is met Nederland, dan is het label ANDERS.</p>
+
+<p>Het beleid gaat over mondkapjes voor een algemeen publiek. Als een bericht gaat over mondkapjes voor de zorg is het label ANDERS.</p>
+
+<p>Als een bericht waarschijnlijk of zeker sarcastisch is of een grap, dan is de bedoeling dat het geannoteerd wordt alsof het een gewoon bericht is.</p>
+
+<p>In het algemeen is het de bedoeling om niet te voorzichtig te annoteren. Als de mening van de schrijver afgeleid kan worden uit het bericht dan moet deze mening geannoteerd worden met EENS of ONEENS.</p>
+
+<div style="background-color:lightgrey; font-size:smaller;">
+<h3>Voorbeelden:</h3>
+
+<p><strong>ONEENS</strong> - Is dat ook niet de reden dat de Nederlandse burger wordt afgeraden om een mondkapje te dragen: gewoonweg omdat er een gebrek aan is terwijl het wel bescherming biedt tegen het coronavirus! Rutte laat ons verrekken!</p>
+
+<p><strong>EENS</strong> - Er loopt daar niemand. Je komt dus ook niemand tegen. Ik passeerde hem op minstens 5 meter afstand. Dat mondkapje is totale onzin.</p>
+
+<p><strong>ANDERS</strong> (want: specifiek voor de zorg) - als ik in de zorg had gewerkt had ik ook van te voren mondkapje gekocht (met verwisselbare carbonfilters) dat laat ik niet afhangen van een falende overheid. net als alcohol om de boel te desinfecteren....had namelijk eind januarie in de gaten dat er een pandemie aan zat te komen</p>
+
+<p><strong>ANDERS</strong> (want: gaat niet over mondkapjes-beleid) 2x per week tussen 8-9 uur, dan is het nog rustig. Maar dan nog áltijd van die pannenkoeken die echt zowat tegen je aan gaan staan. Echt onbegrijpelijk. Vanmorgen vrouw die vond dat het kon want zij droeg mondkapje. Echt 🤦🤦🤦</p>
+
+<p><strong>ANDERS</strong> (want: gaat niet over Nederland, en is neutraal) - Het ministerie van Volksgezondheid heeft alle Israëliërs opgeroepen het huis niet te verlaten zonder mondkapje te dragen.</p>
+
+<p><strong>ONEENS</strong> (gaat over New York, maar wel een vergelijking met Nederland) - ..en In New York ook mondkapjes...hebben al die buitenlandse deskundigen het mis, of is RIVM toch niet zo deskundig??</p>
+
+<p><strong>EENS</strong> (ondanks mogelijk sarcasme) - En een mondkapje is niet nodig hoor Peter. Echt niet.</p>
+
+<p><strong>ANDERS</strong> (mening onduidelijk) - Moet je toch zelf weten. Zelfs als je mondkapje op gehad zou hebben. Dit virus is levensgevaarlijk en besmettelijk.</p>
+</div>
 </body>
 </html>
